Bug 261705 - Solid::SerialInterface produces tty as serial devices.
Summary: Solid::SerialInterface produces tty as serial devices.
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: libsolid-udev (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Alex Fiestas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-31 12:50 UTC by David Hubner
Modified: 2010-12-31 16:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Hubner 2010-12-31 12:50:52 UTC
Version:           unspecified (using KDE 4.5.90) 
OS:                Linux

Solid::SerialInterface produces tty devices and ttyS devices as serial devices.

solid-hardware produces for tty's which is a little spammy 

udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty0'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty1'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty10'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty11'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty12'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty13'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty14'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty15'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty16'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty17'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty18'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty19'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty2'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty20'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty21'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty22'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty23'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty24'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty25'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty26'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty27'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty28'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty29'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty3'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty30'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty31'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty32'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty33'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty34'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty35'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty36'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty37'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty38'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty39'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty4'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty40'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty41'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty42'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty43'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty44'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty45'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty46'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty47'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty48'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty49'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty5'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty50'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty51'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty52'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty53'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty54'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty55'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty56'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty57'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty58'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty59'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty6'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty60'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty61'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty62'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty63'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty7'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty8'
udi = '/org/kde/solid/udev/sys/devices/virtual/tty/tty9'

Also when doing Solid::Device.as<Solid::SerialInterface> on a tty device it fails. 


Reproducible: Always
Comment 1 Alex Fiestas 2010-12-31 16:27:02 UTC
SVN commit 1210468 by afiestas:

Do not list as serial device the virtuals one, filter them by checking DEVPATH if it stars with /devices/virtual

BUG: 261705


 M  +1 -1      udevmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1210468