Do not list as serial device the virtuals one, filter them by checking DEVPATH if it stars with /devices/virtual

BUG: 261705

svn path=/trunk/KDE/kdelibs/; revision=1210468